[tool.poetry]
name = "Grammargeddon"
version = "0.1.0"
description = ""
authors = ["euneestella <eunee.stella@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
pydantic = ">=2.7.0,<3.0.0"
langflow = "^1.1.1"
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
